feat: add link to github pull request

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -84,8 +84,11 @@
 						<label for="switch5"></label> -->
 					</div>
 				</article>
+				
 		</div>
 	</div>
-	
+	<a class="link_git" href="https://github.com/Vladimir-cloudj/cssMemSlider/pull/1">
+		<img src="/cssMemSlider/img/github.png" height="32" width="64" alt="Link to pull request">
+	</a>
 </body>
 </html>
